自身のユーザ情報を取得するAPIを作成
